--- a/pages/search.html
+++ b/pages/search.html
@@ -1,11 +1,11 @@
 ---
 layout: search
 permalink: /search/
-title: Search Our Site
+title: Search
 headline: Search Our Site
 pagedesc: Search Our Site
 tags: [Page]
-hide: true
+hide: false
 htmlbeforeheadend: page/htmlbeforeheadend.html
 htmlbeforebodyend: page/htmlbeforebodyend.html
 ---
