--- a/pages/tags.html
+++ b/pages/tags.html
@@ -4,7 +4,7 @@ permalink: /tags/
 title: Tags
 headline: 'Tags:'
 pagedesc: Tags
-hide: true
+hide: false
 htmlbeforeheadend: page/htmlbeforeheadend.html
 htmlbeforebodyend: page/htmlbeforebodyend.html
 ---
