--- a/pages/search.html
+++ b/pages/search.html
@@ -1,7 +1,7 @@
 ---
 layout: search
 permalink: /search/
-title: Search
+title: <i class="fa-solid fa-magnifying-glass"></i> Search
 headline: Search Our Site
 pagedesc: Search Our Site
 tags: [Page]
