--- a/pages/tags.html
+++ b/pages/tags.html
@@ -1,7 +1,7 @@
 ---
 layout: tags
 permalink: /tags/
-title: Tags
+title: <i class="fa-solid fa-tags"></i> Tags
 headline: 'Tags:'
 pagedesc: Tags
 hide: false
