--- a/_templates/conent-blocks/content-with-image-and-headline-left-template.html
+++ b/_templates/conent-blocks/content-with-image-and-headline-left-template.html
@@ -5,7 +5,7 @@
         <div class="row align-items-center">
             <div class="col-12 col-lg-4">
                 <div class="image-wrapper">
-                    <a href="ZZZURL"><img data-src="/assets/images/4.jpg" alt="Mobirise Website Builder" /></a>
+                    <img data-src="/assets/images/4.jpg" alt="Mobirise Website Builder" />
                 </div>
             </div>
             <div class="col-12 col-lg">
