--- a/_templates/yyyy-mm-dd-blogpost.html
+++ b/_templates/yyyy-mm-dd-blogpost.html
@@ -9,3 +9,100 @@ tags:
 htmlbeforeheadend:
 htmlbeforebodyend:
 ---
+<!-- Einleitung START -->
+<section data-bs-version="5.1" class="content5 cid-tyyJcTFpkx" id="content5-4">
+    <!-- CONTENT-TEMPLATE START -->
+
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 col-lg-10">
+                <p class="mbr-text mbr-fonts-style display-7">
+                    XXXCONTENT
+                </p>
+            </div>
+        </div>
+    </div>
+    <!-- CONTENT-TEMPLATE END -->
+</section>
+<!-- Einleitung ENDE -->
+
+<!-- Über die Zutaten START-->
+<section data-bs-version="5.1" class="image1 cid-tyz1VZbAsM" id="image1-a">
+    <!-- CONTENT-WITH-IMAGE-AND-HEADLINE-LEFT-TEMPLATE START -->
+
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-12 col-lg-4">
+                <div class="image-wrapper">
+                    <img data-src="/assets/images/zutaten.png" alt="Mobirise Website Builder" />
+                </div>
+            </div>
+            <div class="col-12 col-lg">
+                <div class="text-wrapper">
+                    <h3 class="mbr-section-title mbr-fonts-style mb-3 display-5">
+                        <strong>Über die Zutaten:</strong>
+                    </h3>
+                    <p class="mbr-text mbr-fonts-style display-7">
+                        YYYCONTENT
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- CONTENT-WITH-IMAGE-AND-HEADLINE-LEFT-TEMPLATE END -->
+</section>
+<!-- Über die Zutaten END-->
+
+<!-- Variationen START-->
+<section data-bs-version="5.1" class="image1 cid-tyz1VZbAsM" id="image1-a">
+    <!-- CONTENT-WITH-IMAGE-AND-HEADLINE-LEFT-TEMPLATE START -->
+
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-12 col-lg-4">
+                <div class="image-wrapper">
+                    <img data-src="/assets/images/variations.png" alt="Mobirise Website Builder" />
+                </div>
+            </div>
+            <div class="col-12 col-lg">
+                <div class="text-wrapper">
+                    <h3 class="mbr-section-title mbr-fonts-style mb-3 display-5">
+                        <strong>Variationen:</strong>
+                    </h3>
+                    <p class="mbr-text mbr-fonts-style display-7">
+                        YYYCONTENT
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- CONTENT-WITH-IMAGE-AND-HEADLINE-LEFT-TEMPLATE END -->
+</section>
+<!-- Variationen END-->
+
+<!-- Serviervorschläge START-->
+<section data-bs-version="5.1" class="image1 cid-tyz1VZbAsM" id="image1-a">
+    <!-- CONTENT-WITH-IMAGE-AND-HEADLINE-LEFT-TEMPLATE START -->
+
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-12 col-lg-4">
+                <div class="image-wrapper">
+                    <img data-src="/assets/images/serving-tips.jpg" alt="Mobirise Website Builder" />
+                </div>
+            </div>
+            <div class="col-12 col-lg">
+                <div class="text-wrapper">
+                    <h3 class="mbr-section-title mbr-fonts-style mb-3 display-5">
+                        <strong>Serviervorschläge</strong>
+                    </h3>
+                    <p class="mbr-text mbr-fonts-style display-7">
+                        YYYCONTENT
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- CONTENT-WITH-IMAGE-AND-HEADLINE-LEFT-TEMPLATE END -->
+</section>
+<!-- Serviervorschläge END-->
