--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: frontpage
 title: Start
+menutitle: <i class="fa-solid fa-house"></i>&nbsp;Start
 headline: Willkommen
 pagedesc: Willkommen
 hide: false
