--- a/pages/search.html
+++ b/pages/search.html
@@ -2,6 +2,7 @@
 layout: search
 permalink: /search/
 title: Suche
+menutitle: <i class="fa-solid fa-magnifying-glass"></i>&nbsp;Suche
 headline: Suche
 pagedesc: Suche
 tags: [Page]
