--- a/_templates/yyyy-mm-dd-blogpost.html
+++ b/_templates/yyyy-mm-dd-blogpost.html
@@ -1,10 +1,11 @@
 ---
-layout: page
+layout: blog
 permalink:
 pagedesc:
 title:
 headline:
 thumbnail:
+datafile: 
 tags:
 htmlbeforeheadend:
 htmlbeforebodyend:
