--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: frontpage
 title: Start
 menutitle: <i class="fa-solid fa-house"></i>&nbsp;Start
 headline: Wilkommen # Your Headline
-pagedesc: # Your Page-Description
+pagedesc: Wilkommen zu Kochen Mit KI # Your Page-Description
 hide: false # Show On Site-Menu ?
 ---
